--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -184,3 +184,9 @@ input {
     border-bottom: 1px solid $gray-lighter;
   }
 }
+
+.button-center{
+  margin:auto;
+  display:block;
+  width:20%;
+}
